fix: z-index position for worklist-section in backdrop meny

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ a {
     width: 100%;
     height: 100%;
     background-color:rgba(0, 0, 0, 0.2);
-
+    z-index: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -500,6 +500,7 @@ a {
 
 .work-list .item {
     position: relative;
+    z-index: 0;
 }
 
 .work-list-box {
